--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
+     <img  src="images.jpg" alt="not support" width="500" height="250">
     <form id="h">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" value="John"><br>
